--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="cart__products"></div>
         <div class="card__total">
             <div class="cart__total--info">
-                <span>items</span><span>$${}.00</span>
+                <span>item</span><span>$${}.00</span>
             </div>
         </div>
     </div>
