--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://academlostorev1.netlify.app/images/favicon.png">
-    <title>Academlo Store</title>
+    <title>Zarais Academlo Store</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap">
@@ -63,8 +63,9 @@
         <div class="cart__products"></div>
         <div class="card__total">
             <div class="cart__total--info">
-                <span>item</span><span>$${}.00</span>
+                <span class="total__item">item</span><span class="total__buy">$.00</span>
             </div>
+            <button class="btn__buy">Comprar</button>
         </div>
     </div>
 
@@ -95,7 +96,7 @@
             <ul>
                 <li><i class='bx bx-user'></i>Zarais María Díaz Torres</li>
                 <li><i class='bx bx-envelope'></i>zaraisgold@gmail.com</li>
-                <li><a href="#"><i class='bx bxl-netlify'></i>Netlify</a></li>
+                <li><a href="https://zaraisacademlostore.netlify.app/" target="_blank"><i class='bx bxl-netlify'></i>Netlify</a></li>
             </ul>
         </section>
     </footer>
