--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="cart__products"></div>
         <div class="card__total">
             <div class="cart__total--info">
-                <span class="total__item">item</span><span class="total__buy">$.00</span>
+                <span class="total__item"></span><span class="total__buy"></span>
             </div>
             <button class="btn__buy">Comprar</button>
         </div>
