--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </ul>
             <div class="navbar__icons">
                 <i class='bx bx-moon'></i>
-                <i class='bx bx-shopping-bag'></i>
+                <i class='bx bx-shopping-bag'>
+                    <span class="products__amount"></span>
+                </i>
                 <i class='bx bxs-dashboard'></i>
             </div>
         </nav>
