--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="cart">
         <i class='bx bx-x'></i>
         <div class="cart__products"></div>
-        <div class="card__total">
+        <div class="cart__total">
             <div class="cart__total--info">
                 <span class="total__item"></span><span class="total__buy"></span>
             </div>
