--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main class="main__container">
-        <section class="home__content">
+        <section class="home__content" id="home">
             <div></div>
             <div class="home__img">
                 <img src="https://academlostorev1.netlify.app/images/sweater2.png" alt="image">
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section class="products__content">
+        <section class="products__content" id="products">
             <div class="products"></div>
         </section>
     </main>
@@ -75,22 +75,22 @@
         <section class="footer__content">
             <div>
                 <h3>Our information</h3>
-                <a href="#">Toluca - México</a>
+                <a href="#home">Toluca - México</a>
             </div>
             <div>
                 <h3>About Us</h3>
-                <a href="#">Support Center</a><a href="#">Customer Support</a><a href="#">About Us</a><a href="#">Copy Right</a>
+                <a href="#home">Support Center</a><a href="#home">Customer Support</a><a href="#home">About Us</a><a href="#home">Copy Right</a>
             </div>
             <div>
                 <h3>Product</h3>
-                <a href="#">Hoodies</a><a href="#">Shirts</a><a href="#">About Us</a><a href="#">Sweatshirts</a>
+                <a href="#products">Hoodies</a><a href="#products">Shirts</a><a href="#products">About Us</a><a href="#products">Sweatshirts</a>
             </div>
             <div>
                 <h3>Social</h3>
                 <ul>
-                    <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
-                    <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
-                    <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
+                    <li><a href="#home"><i class='bx bxl-facebook'></i></a></li>
+                    <li><a href="#home"><i class='bx bxl-twitter'></i></a></li>
+                    <li><a href="#home"><i class='bx bxl-instagram'></i></a></li>
                 </ul>
             </div>
         </section>
