--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./assets/js/main.js" defer></script>
 </head>
 
-<body>
+<body class="dark__mode">
     <header class="header__container">
         <nav class="navbar__content">
             <div class="navbar__logo">
@@ -33,6 +33,7 @@
             </ul>
             <div class="navbar__icons">
                 <i class='bx bx-moon'></i>
+                <i class='bx bx-sun'></i>
                 <i class='bx bx-shopping-bag'>
                     <span class="products__amount"></span>
                 </i>
