--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <li><a href="#products">Products</a></li>
             </ul>
             <div class="navbar__icons">
-                <i class='bx bx-moon'></i>
-                <i class='bx bx-sun'></i>
+                <i class='bx bx-moon' id="add"></i>
+                <i class='bx bx-sun' id="remove"></i>
                 <i class='bx bx-shopping-bag'>
                     <span class="products__amount"></span>
                 </i>
@@ -51,7 +51,8 @@
             </div>
             <div class="home__body">
                 <h2>New Sweatshirt COLLECTIONS 2022</h2>
-                <p>Latest arrival of the new Hanes Midweight Crewneck sweatshirt imported from the 2022 series, with a modern design.</p>
+                <p>Latest arrival of the new Hanes Midweight Crewneck sweatshirt imported from the 2022 series, with a
+                    modern design.</p>
                 <p>$14.00</p>
                 <a href="#products">Show more</a>
             </div>
@@ -87,11 +88,13 @@
             </div>
             <div>
                 <h3>About Us</h3>
-                <a href="#home">Support Center</a><a href="#home">Customer Support</a><a href="#home">About Us</a><a href="#home">Copy Right</a>
+                <a href="#home">Support Center</a><a href="#home">Customer Support</a><a href="#home">About Us</a><a
+                    href="#home">Copy Right</a>
             </div>
             <div>
                 <h3>Product</h3>
-                <a href="#products">Hoodies</a><a href="#products">Shirts</a><a href="#products">About Us</a><a href="#products">Sweatshirts</a>
+                <a href="#products">Hoodies</a><a href="#products">Shirts</a><a href="#products">About Us</a><a
+                    href="#products">Sweatshirts</a>
             </div>
             <div>
                 <h3>Social</h3>
@@ -106,7 +109,8 @@
             <ul>
                 <li><i class='bx bx-user'></i>Zarais María Díaz Torres</li>
                 <li><i class='bx bx-envelope'></i>zaraisgold@gmail.com</li>
-                <li><a href="https://zaraisacademlostore.netlify.app/" target="_blank"><i class='bx bxl-netlify'></i>Netlify</a></li>
+                <li><a href="https://github.com/ZaraisGOLD/ZaraisAcademloStore.git" target="_blank"><i
+                            class='bx bxl-netlify'></i>Netlify</a></li>
             </ul>
         </section>
     </footer>
