--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
             <ul>
                 <li><i class='bx bx-user'></i>Zarais María Díaz Torres</li>
                 <li><i class='bx bx-envelope'></i>zaraisgold@gmail.com</li>
-                <li><a href="https://github.com/ZaraisGOLD/ZaraisAcademloStore.git" target="_blank"><i
-                            class='bx bxl-netlify'></i>Netlify</a></li>
+                <li><a href="https://github.com/ZaraisGOLD/ZaraisAcademloStore.git" target="_blank"><i class='bx bxl-github'></i>GitHub</a></li>
             </ul>
         </section>
     </footer>
