--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="./assets/js/main.js" defer></script>
 </head>
 
-<body class="dark__mode">
+<body>
     <header class="header__container">
         <nav class="navbar__content">
             <div class="navbar__logo">
